<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="plsenter">Please enter your name:</string>
	<string name="button1txt">Submit</string>
	<string name="button2txt">2</string>
	<string name="button3txt">3</string>
	<string name="textView1txt">Congrats! This is my first android app: Brand New Calculator</string>
	
</resources>
